fix step number shifting during transitions by setting explicit line height

--- a/css/styles.css
+++ b/css/styles.css
@@ -110,13 +110,13 @@ form.stepped-form .step aside::before {
     top: 0;
     left: 0;
     display: flex;
-    content: attr(data-index);
-    width: 2em;
-    height: 2em;
-    min-width: 2em;
-    min-height: 2em;
     align-items: center;
     justify-content: center;
+    content: attr(data-index);
+    min-width: 2em;
+    min-height: 2em;
+    max-width: 2em;
+    max-height: 2em;
     color: #9E9E9E;
     background-color: #e0e0e0;
     border-radius: 50%;
@@ -124,8 +124,8 @@ form.stepped-form .step aside::before {
     transition-property: background-color, color;
     transition-duration: 0.3s;
     font-weight: bold;
+    line-height: 1;
 }
-
 
 /* Active section icon */
 form.stepped-form .step aside:hover::before {
